Update and rename 2021-06-19-四足机器人.md to 2021-06-19-智能机器的软件算法.md

--- a/_posts/2021-06-19-智能机器的软件算法.md
+++ b/_posts/2021-06-19-智能机器的软件算法.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
-title:      四足机器人的软件
-subtitle:   Software of quadruped robots
+title:      智能机器的的软件算法
+subtitle:   Algorithms of robots
 date:       2021-06-19
 author:     Jacob
 header-img: img/the-first.png
@@ -10,7 +10,7 @@ tags:
     - 技术
 ---
 
-<p>PDF: <a href="https://jacobck163.github.io/files/%E5%9B%9B%E8%B6%B3%E6%9C%BA%E5%99%A8%E4%BA%BA.pdf">四足机器人软件</a></p>
+<p>PDF: <a href="https://jacobck163.github.io/files/%E5%9B%9B%E8%B6%B3%E6%9C%BA%E5%99%A8%E4%BA%BA.pdf">智能机器的软件算法</a></p>
 
 <p>Video: <a href="https://jacobck163.github.io/files/%E8%87%AA%E4%B8%BB%E5%B7%A1%E6%A3%80_%E5%91%98%E5%B7%A5%E4%BA%BA%E6%95%B0%E6%A3%80%E6%9F%A5.mp4">算法测试-自主巡检-查岗</a></p>
 
