Update and rename 2018-09-01-软硬件优化.md to 2018-09-01-软硬件性能优化.md

--- a/_posts/2018-09-01-软硬件性能优化.md
+++ b/_posts/2018-09-01-软硬件性能优化.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      软硬件优化
+title:      软硬件性能优化
 subtitle:   Performance optimization of computer
 date:       2018-09-01
 author:     Jacob
@@ -11,5 +11,5 @@ tags:
 ---
 
 
-<p>PDF: <a href="https://jacobck163.github.io/files/%E8%BD%AF%E7%A1%AC%E4%BB%B6%E4%BC%98%E5%8C%96.pdf">软硬件优化</a>.</p>
+<p>PDF: <a href="https://jacobck163.github.io/files/%E8%BD%AF%E7%A1%AC%E4%BB%B6%E4%BC%98%E5%8C%96.pdf">软硬件性能优化</a>.</p>
 
