--- a/_posts/2019-09-01-计算机性能优化.md
+++ b/_posts/2019-09-01-计算机性能优化.md
@@ -11,5 +11,5 @@ tags:
 ---
 
 
-<p>PDF: <a href="https://jacobck163.github.io/files/%E8%BD%AF%E7%A1%AC%E4%BB%B6%E6%80%A7%E8%83%BD%E4%BC%98%E5%8C%96.pdf">计算机性能优化</a>.</p>
+<p>PDF: <a href="https://jacobck163.github.io/files/%E8%AE%A1%E7%AE%97%E6%9C%BA%E6%80%A7%E8%83%BD%E4%BC%98%E5%8C%96.pdf">计算机性能优化</a>.</p>
 
